# Neural-Network-Visualization-Qt

./: AppFrame.qml  AppMenu.qml  BadSet(30,500,0 0001).txt  ButtonSet.qml  CMakeLists.txt  DrawSpace.qml  GoodSet(50,1, 0 0001).txt  GoodSet(50,10, 0 0001).txt  GoodSetPerfectStudying.txt  Main.qml  Matrix.hpp  Neural_Network.hpp  README.md  SettingsFrame.qml  WithoutStudying.txt  main.cpp  neuralnetworkwraper.cpp  neuralnetworkwraper.h
